src/GridLayout.css
.grid-container {
    display: grid;
    justify-content: center;
    align-content: start;
}

@media only screen and (max-width: 599px) {
    .grid-container {
        margin: 0 16px;
        gap: 16px 16px;
        grid-template-columns: repeat(4, 1fr);
    }

    .col-xs-start-1, .col-start-1, .col-start-2, .col-start-3 { grid-column-start: 1; }
    .col-xs-start-2, .col-start-4, .col-start-5, .col-start-6 { grid-column-start: 2; }
    .col-xs-start-3, .col-start-7, .col-start-8, .col-start-9 { grid-column-start: 3; }
    .col-xs-start-4, .col-start-10, .col-start-11, .col-start-12 { grid-column-start: 4; }

    .col-xs-span-1, .col-span-1, .col-span-2, .col-span-3 { grid-column-end: span 1; }
    .col-xs-span-2, .col-span-4, .col-span-5, .col-span-6 { grid-column-end: span 2; }
    .col-xs-span-3, .col-span-7, .col-span-8, .col-span-9 { grid-column-end: span 3; }
    .col-xs-span-4, .col-span-10, .col-span-11, .col-span-12 { grid-column-end: span 4; }
}

@media only screen and (min-width: 600px) and (max-width: 719px) {
    .grid-container {
        margin: 0 16px;
        gap: 16px 16px;
        grid-template-columns: repeat(8, 1fr);
    }

    .col-sm-start-1 { grid-column-start: 1; }
    .col-sm-start-2 { grid-column-start: 2; }
    .col-sm-start-3 { grid-column-start: 3; }
    .col-sm-start-4 { grid-column-start: 4; }
    .col-sm-start-5 { grid-column-start: 5; }
    .col-sm-start-6 { grid-column-start: 6; }
    .col-sm-start-7 { grid-column-start: 7; }
    .col-sm-start-8 { grid-column-start: 8; }

    .col-sm-span-1 { grid-column-end: span 1; }
    .col-sm-span-2 { grid-column-end: span 2; }
    .col-sm-span-3 { grid-column-end: span 3; }
    .col-sm-span-4 { grid-column-end: span 4; }
    .col-sm-span-5 { grid-column-end: span 5; }
    .col-sm-span-6 { grid-column-end: span 6; }
    .col-sm-span-7 { grid-column-end: span 7; }
    .col-sm-span-8 { grid-column-end: span 8; }
}

@media only screen and (min-width: 720px) and (max-width: 839px) {
    .grid-container {
        margin: 0 24px;
        gap: 24px 24px;
        grid-template-columns: repeat(8, 1fr);
    }

    .col-sm-start-1 { grid-column-start: 1; }
    .col-sm-start-2 { grid-column-start: 2; }
    .col-sm-start-3 { grid-column-start: 3; }
    .col-sm-start-4 { grid-column-start: 4; }
    .col-sm-start-5 { grid-column-start: 5; }
    .col-sm-start-6 { grid-column-start: 6; }
    .col-sm-start-7 { grid-column-start: 7; }
    .col-sm-start-8 { grid-column-start: 8; }

    .col-sm-span-1 { grid-column-end: span 1; }
    .col-sm-span-2 { grid-column-end: span 2; }
    .col-sm-span-3 { grid-column-end: span 3; }
    .col-sm-span-4 { grid-column-end: span 4; }
    .col-sm-span-5 { grid-column-end: span 5; }
    .col-sm-span-6 { grid-column-end: span 6; }
    .col-sm-span-7 { grid-column-end: span 7; }
    .col-sm-span-8 { grid-column-end: span 8; }
}

@media only screen and (min-width: 840px) and (max-width: 1439px) {
    .grid-container {
        margin: 0 24px;
        gap: 24px 24px;
        grid-template-columns: repeat(12, 1fr);
    }
    
    .col-md-start-1, .col-start-1 { grid-column-start: 1; }
    .col-md-start-2, .col-start-2 { grid-column-start: 2; }
    .col-md-start-3, .col-start-3 { grid-column-start: 3; }
    .col-md-start-4, .col-start-4 { grid-column-start: 4; }
    .col-md-start-5, .col-start-5 { grid-column-start: 5; }
    .col-md-start-6, .col-start-6 { grid-column-start: 6; }
    .col-md-start-7, .col-start-7 { grid-column-start: 7; }
    .col-md-start-8, .col-start-8 { grid-column-start: 8; }
    .col-md-start-9, .col-start-9 { grid-column-start: 9; }
    .col-md-start-10, .col-start-10 { grid-column-start: 10; }
    .col-md-start-11, .col-start-11 { grid-column-start: 11; }
    .col-md-start-12, .col-start-12 { grid-column-start: 12; }

    .col-md-span-1, .col-span-1 { grid-column-end: span 1; }
    .col-md-span-2, .col-span-2 { grid-column-end: span 2; }
    .col-md-span-3, .col-span-3 { grid-column-end: span 3; }
    .col-md-span-4, .col-span-4 { grid-column-end: span 4; }
    .col-md-span-5, .col-span-5 { grid-column-end: span 5; }
    .col-md-span-6, .col-span-6 { grid-column-end: span 6; }
    .col-md-span-7, .col-span-7 { grid-column-end: span 7; }
    .col-md-span-8, .col-span-8 { grid-column-end: span 8; }
    .col-md-span-9, .col-span-9 { grid-column-end: span 9; }
    .col-md-span-10, .col-span-10 { grid-column-end: span 10; }
    .col-md-span-11, .col-span-11 { grid-column-end: span 11; }
    .col-md-span-12, .col-span-12 { grid-column-end: span 12; }
}

@media only screen and (min-width: 1440px) and (max-width: 1919px) {
    .grid-container {
        margin: 0 24px;
        gap: 24px 24px;
        grid-template-columns: repeat(12, 1fr);
    }

    .col-lg-start-1, .col-start-1 { grid-column-start: 1; }
    .col-lg-start-2, .col-start-2 { grid-column-start: 2; }
    .col-lg-start-3, .col-start-3 { grid-column-start: 3; }
    .col-lg-start-4, .col-start-4 { grid-column-start: 4; }
    .col-lg-start-5, .col-start-5 { grid-column-start: 5; }
    .col-lg-start-6, .col-start-6 { grid-column-start: 6; }
    .col-lg-start-7, .col-start-7 { grid-column-start: 7; }
    .col-lg-start-8, .col-start-8 { grid-column-start: 8; }
    .col-lg-start-9, .col-start-9 { grid-column-start: 9; }
    .col-lg-start-10, .col-start-10 { grid-column-start: 10; }
    .col-lg-start-11, .col-start-11 { grid-column-start: 11; }
    .col-lg-start-12, .col-start-12 { grid-column-start: 12; }

    .col-lg-span-1, .col-span-1 { grid-column-end: span 1; }
    .col-lg-span-2, .col-span-2 { grid-column-end: span 2; }
    .col-lg-span-3, .col-span-3 { grid-column-end: span 3; }
    .col-lg-span-4, .col-span-4 { grid-column-end: span 4; }
    .col-lg-span-5, .col-span-5 { grid-column-end: span 5; }
    .col-lg-span-6, .col-span-6 { grid-column-end: span 6; }
    .col-lg-span-7, .col-span-7 { grid-column-end: span 7; }
    .col-lg-span-8, .col-span-8 { grid-column-end: span 8; }
    .col-lg-span-9, .col-span-9 { grid-column-end: span 9; }
    .col-lg-span-10, .col-span-10 { grid-column-end: span 10; }
    .col-lg-span-11, .col-span-11 { grid-column-end: span 11; }
    .col-lg-span-12, .col-span-12 { grid-column-end: span 12; }
}

@media only screen and (min-width: 1920px) {
    .grid-container {
        margin: 0 24px;
        gap: 24px 24px;
        grid-template-columns: repeat(12, 1fr);
    }

    .col-xl-start-1, .col-start-1 { grid-column-start: 1; }
    .col-xl-start-2, .col-start-2 { grid-column-start: 2; }
    .col-xl-start-3, .col-start-3 { grid-column-start: 3; }
    .col-xl-start-4, .col-start-4 { grid-column-start: 4; }
    .col-xl-start-5, .col-start-5 { grid-column-start: 5; }
    .col-xl-start-6, .col-start-6 { grid-column-start: 6; }
    .col-xl-start-7, .col-start-7 { grid-column-start: 7; }
    .col-xl-start-8, .col-start-8 { grid-column-start: 8; }
    .col-xl-start-9, .col-start-9 { grid-column-start: 9; }
    .col-xl-start-10, .col-start-10 { grid-column-start: 10; }
    .col-xl-start-11, .col-start-11 { grid-column-start: 11; }
    .col-xl-start-12, .col-start-12 { grid-column-start: 12; }

    .col-xl-span-1, .col-span-1 { grid-column-end: span 1; }
    .col-xl-span-2, .col-span-2 { grid-column-end: span 2; }
    .col-xl-span-3, .col-span-3 { grid-column-end: span 3; }
    .col-xl-span-4, .col-span-4 { grid-column-end: span 4; }
    .col-xl-span-5, .col-span-5 { grid-column-end: span 5; }
    .col-xl-span-6, .col-span-6 { grid-column-end: span 6; }
    .col-xl-span-7, .col-span-7 { grid-column-end: span 7; }
    .col-xl-span-8, .col-span-8 { grid-column-end: span 8; }
    .col-xl-span-9, .col-span-9 { grid-column-end: span 9; }
    .col-xl-span-10, .col-span-10 { grid-column-end: span 10; }
    .col-xl-span-11, .col-span-11 { grid-column-end: span 11; }
    .col-xl-span-12, .col-span-12 { grid-column-end: span 12; }
}

